fixed an issue on smaller mobile screens

--- a/style/style.css
+++ b/style/style.css
@@ -169,7 +169,7 @@ input:focus{
 		min-width: 100%;
 	}
 	.intro{
-			font-size: 0.9rem;
+			font-size: 0.7rem;
 
 	}
 		#mce-EMAIL{
